# tailRisk

./: CMakeLists.txt  ChangeLog.md  Dockerfile  LICENSE  README.md  RandomVarRepresentations.md  RiskMeasures.md  TODO.md  conanfile.txt  main.cpp  random_var.cpp  random_var.h  testing.cpp
data/: example0.json  example1.json  example2.json  example3.json  example4.json  example5.json
src/: CMakeLists.txt  conanfile.txt  main.cpp  random_var.cpp  random_var.h
testing/: test_factorial.cpp  test_histogram.cpp  test_random_var.cpp  test_random_var_beta.cpp  test_random_var_binomial.cpp  test_vectors.cpp
testing/rnd_statistics/: test_random_var_bernulli.cpp  test_random_var_beta.cpp  test_random_var_binomial.cpp  test_random_var_exponential.cpp  test_random_var_lognormal.cpp  test_random_var_normal.cpp  test_random_var_uniform.cpp
